--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "SqlConnection": "server=.; database=CompanyEmployee; Integrated Security=true"
+  },
+  "AllowedHosts": "*"
 }
