--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SqlConnection": "server=.; database=CompanyEmployee; Integrated Security=true"
+  }
 }
