--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Service\Service.csproj" />
+    <ProjectReference Include="..\Api.Presentation\Api.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
