--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "server=.; database=CompanyEmployee; Integrated Security=true"
+    "SqlConnection": "Server=Ethan;Database=q;Integrated Security=true;"
   },
   "AllowedHosts": "*"
 }
