--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "server=.; database=CompanyEmployee; Integrated Security=true"
-  }
+    "SqlConnection": "Server=Ethan;Database=HR_Test;Integrated Security=true;"
+  },
+  "AllowedHosts": "*"
 }
