:zap: Better Validation for both CSV and Xml

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnection": "Server=Ethan;Database=HR_Test;Integrated Security=true;"
+    "SqlConnection": "Server=Ethan;Database=Test;Integrated Security=true;"
   },
   "AllowedHosts": "*"
 }
